self-sign: fix multiple domainName support